--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
     <ul id="crypto-list"></ul>
   </section>
 
+  <section id="chart-section" style="display: none;">
+    <h2 id="chart-title">캔들 차트</h2>
+    <div class="chart-container">
+      <canvas id="priceChart"></canvas>
+    </div>
+    <button id="back-to-list-btn">뒤로</button>
+  </section>
+
   <section id="news-section" style="display: none;">
     <h2>암호화폐 관련 뉴스</h2>
     <div id="news-list">
     </div>
   </section>
 </div>
-
-<script src="script.js"></script>
 </body>
 </html>
