--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
 
 <div class="container">
   <section id="crypto-info-section">
+    <div id="loading-spinner" style="display: none;">로딩 중...</div>
     <h2>현재 암호화폐 가격</h2>
+    <input
+            type="text"
+            id="search-bar"
+            placeholder="검색어를 입력하세요..."
+            style="margin-bottom: 10px; padding: 8px; width: 100%; border: 1px solid #ccc; border-radius: 5px;"
+    >
     <div class="sort-options">
       <button id="sort-by-name" class="sort-btn">이름순</button>
       <button id="sort-by-price" class="sort-btn">가격순</button>
-      <button id="sort-by-change-amount" class="sort-btn">변화액</button>
-      <button id="sort-by-change-rate" class="sort-btn">변화율</button>
+      <button id="sort-by-changeAmount" class="sort-btn">변화액</button>
+      <button id="sort-by-changeRate" class="sort-btn">변화율</button>
     </div>
     <div class="change-type-options">
       <button id="toggle-change-type" class="sort-btn">변화액</button>
@@ -37,15 +44,23 @@
 
   <section id="chart-section" style="display: none;">
     <h2 id="chart-title">캔들 차트</h2>
+    <div class="chart-controls">
+      <button id="minute-candle-btn">분 차트</button>
+      <button id="day-candle-btn">일 차트</button>
+      <button id="week-candle-btn">주 차트</button>
+      <button id="month-candle-btn">월 차트</button>
+    </div>
     <div class="chart-container">
-      <canvas id="priceChart"></canvas>
+      <div class="chart-wrapper">
+        <canvas id="priceChart"></canvas>
+      </div>
     </div>
     <button id="back-to-list-btn">뒤로</button>
   </section>
 
   <section id="news-section" style="display: none;">
     <h2>암호화폐 관련 뉴스</h2>
-    <div id="news-list">
+    <div id="news-list" class="news-list">
     </div>
   </section>
 </div>
