--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
@@ -24,6 +25,14 @@
   <section id="crypto-info-section">
     <div id="loading-spinner" style="display: none;">로딩 중...</div>
     <h2>현재 암호화폐 가격</h2>
+    <div class="view-options">
+      <button id="show-all" class="view-btn active">
+        <i class="fas fa-list"></i>전체보기
+      </button>
+      <button id="show-favorites" class="view-btn">
+        <i class="fas fa-star"></i>즐겨찾기
+      </button>
+    </div>
     <input
             type="text"
             id="search-bar"
@@ -60,9 +69,33 @@
 
   <section id="news-section" style="display: none;">
     <h2>암호화폐 관련 뉴스</h2>
-    <div id="news-list" class="news-list">
+    <div class="news-controls">
+      <button id="refresh-news-btn" class="refresh-btn">새로고침</button>
     </div>
+    <div id="news-list" class="news-list"></div>
   </section>
+</div>
+
+<!-- 알림 설정 모달 -->
+<div id="alert-modal" class="modal">
+  <div class="modal-content">
+    <h3>가격 알림 설정</h3>
+    <div class="alert-form">
+      <input type="number" id="alert-price" placeholder="목표 가격">
+      <select id="alert-condition">
+        <option value="above">이상</option>
+        <option value="below">이하</option>
+      </select>
+      <button id="save-alert">저장</button>
+    </div>
+    
+    <div class="alerts-list">
+      <h4>설정된 알림 목록</h4>
+      <ul id="alerts-list"></ul>
+    </div>
+    
+    <button id="close-modal">닫기</button>
+  </div>
 </div>
 </body>
 </html>
