--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
   <section id="chart-section" style="display: none;">
     <h2 id="chart-title">캔들 차트</h2>
+    <button id="back-to-list-btn" class="back-btn">🠔</button>
     <div class="chart-controls">
       <button id="minute-candle-btn">분 차트</button>
       <button id="day-candle-btn">일 차트</button>
@@ -64,7 +65,6 @@
         <canvas id="priceChart"></canvas>
       </div>
     </div>
-    <button id="back-to-list-btn">뒤로</button>
   </section>
 
   <section id="news-section" style="display: none;">
